--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,11 @@
   "requires": [],
   "optional": [],
   "js": "index.js",
-  "css": "",
+  "css": "style.css",
   "author": "aikohanasaki",
   "version": "1.0.0",
   "homePage": "https://github.com/aikohanasaki/SillyTavern-CCPromptManager",
-  "description": "Advanced prompt management extension for SillyTavern providing template management, enhanced UI, and extended prompt capabilities.",
+  "description": "Advanced prompt template management for SillyTavern. Create, save, and lock prompt configurations per character, chat, or group. Features template library, hierarchical locking, auto-apply on preset/character changes, and full prompt editing.",
   "license": "AGPL-3.0",
   "auto_update": {
     "source": "github",
